# AI-Financial-Assistant

./: .dockerignore  .env_example  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_repository.py
alembic/: env.py
alembic/versions/: 3154ffadf735_initial_migration.py
app/: app.py  main.py
app/api/: ai_router.py  auth_router.py  category_router.py  deps.py  transaction_router.py  user_router.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  ai_chat.py  all.py  category.py  transaction.py  transcaction.py  user.py
app/repositories/: ai_chat_repository.py  category_repository.py  transaction_repository.py  user_repository.py
app/schemas/: ai.py  auth.py  category.py  transaction.py  user.py
app/services/: ai_service.py  ai_tools.py  auth_service.py  category_service.py  llm_service.py  promts.py  transaction_service.py  user_service.py
