[project]
name = "ai-financial-assistant"
version = "0.1.0"
description = "AI Financial Assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
